--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   gap: ^3.0.1
   gotrue: ^1.12.6
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
