--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.7
   flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
   gap: ^3.0.1
   gotrue: ^2.1.0
   readmore: ^2.2.0
