--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  
   flutter_native_splash: ^2.3.7
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
@@ -40,8 +41,15 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/coffee.png"   
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
