--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  
+  flutter_bloc: ^8.1.3
   flutter_native_splash: ^2.3.7
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
@@ -40,14 +40,14 @@ dependencies:
   readmore: ^2.2.0
 
 dev_dependencies:
-  flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/coffee.png"   
+  image_path: "assets/images/coffee.png"
   adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: "assets/images/logo.png"
 
